--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,48 @@
+## cj
+
+**/.DS_Store
+**/*.class
+#**/*.jar
+**/*.pyc
+
+**/.idea/
+**/bin/*
+**/build/
+**/current/*.csv
+**/current/*.json
+**/current/*.txt
+**/current/*.xlsx
+**/current/captured_docs/*.json
+**/current/captured_docs/*.txt
+**/current/cred/*.json
+**/current/cred/*.txt
+**/current/docscan/*.json
+**/current/docscan/*.txt
+**/current/mmaout/*.json
+**/current/mmaout/*.txt
+**/current/psql/*.csv
+**/current/psql/*.txt
+**/log/
+**/out/
+**/tmp/*.csv
+**/tmp/*.json
+**/tmp/*.ps1
+**/tmp/*.txt
+**/tmp/*.xlsx
+**/tmp/*.xml
+**/venv/
+
+pyapp/mmaout/
+pyapp/out/
+
+pyapp/pymongo_connect.ps1
+
+pyapp/verify.json 
+pyapp/verify1.json 
+pyapp/verify2.json 
+pyapp/verify3.json 
+pyapp/verify_*.json
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -20,6 +65,7 @@ parts/
 sdist/
 var/
 wheels/
+pip-wheel-metadata/
 share/python-wheels/
 *.egg-info/
 .installed.cfg
@@ -49,7 +95,6 @@ coverage.xml
 *.py,cover
 .hypothesis/
 .pytest_cache/
-cover/
 
 # Translations
 *.mo
@@ -72,7 +117,6 @@ instance/
 docs/_build/
 
 # PyBuilder
-.pybuilder/
 target/
 
 # Jupyter Notebook
@@ -83,9 +127,7 @@ profile_default/
 ipython_config.py
 
 # pyenv
-#   For a library or package, you might want to ignore these files since the code is
-#   intended to run in multiple environments; otherwise, check them in:
-# .python-version
+.python-version
 
 # pipenv
 #   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
@@ -94,22 +136,7 @@ ipython_config.py
 #   install all needed dependencies.
 #Pipfile.lock
 
-# poetry
-#   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
-#   This is especially recommended for binary packages to ensure reproducibility, and is more
-#   commonly ignored for libraries.
-#   https://python-poetry.org/docs/basic-usage/#commit-your-poetrylock-file-to-version-control
-#poetry.lock
-
-# pdm
-#   Similar to Pipfile.lock, it is generally recommended to include pdm.lock in version control.
-#pdm.lock
-#   pdm stores project-wide configurations in .pdm.toml, but it is recommended to not include it
-#   in version control.
-#   https://pdm.fming.dev/#use-with-ide
-.pdm.toml
-
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
+# PEP 582; used by e.g. github.com/David-OConnor/pyflow
 __pypackages__/
 
 # Celery stuff
@@ -145,16 +172,3 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
-
-# pytype static type analyzer
-.pytype/
-
-# Cython debug symbols
-cython_debug/
-
-# PyCharm
-#  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
-#  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
-#  and can be added to the global gitignore or merged into this file.  For a more nuclear
-#  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
